# simethicone

./: .gitignore  Dockerfile  Makefile  README.md  api_startup.sh  docker-compose.yml  main.py  pyproject.toml  vd.ipynb
database/: connector.py  models.py
database/scripts/: init_db.py
etl/: annual_miles.py  fuel_efficiency.py  load.py  shared.py  vehicle_data.py
src/api/: api.py  main.py  utils.py
src/database/: connector.py  models.py
src/database/scripts/: init_db.py
src/database/sql/: load_fuel_efficiency_monthly.sql
src/etl/: annual_miles.py  derived_tables.py  fuel_efficiency.py  load.py  run.py  utils.py  vehicle_data.py
take_home_src/: Dockerfile  annual_miles.csv  api.py  docker-compose.yml  model.pkl
